fix align of categories on homepage

--- a/app/assets/stylesheets/spree/frontend/customs/spree/layouts/spree_application.scss
+++ b/app/assets/stylesheets/spree/frontend/customs/spree/layouts/spree_application.scss
@@ -219,6 +219,7 @@ body {
   line-height: 1.5;
   font-weight: 900;
   text-transform: capitalize;
+  text-align: left;
   font-size: 1.3rem !important;
 }
 
